# cibnav

./: .env.example  .flake8  .gitignore  404.html  Makefile  README.md  accidentologie.html  algorithme2.html  ameliorations.html  analyse_securite.html  annexes.html  cadrage.html  controles_gens_de_mer.html  controles_securite.html  docker-compose.yml  donnees2.html  evolution_cibnav_v2.html  fact_sheet.html  faq.html  fonctionnement_analyse.html  general2.html  index.html  installation.html  modeles_donnees.html  moteur_regles.html  package.json  parametres_en_cours_analyse.html  parametres_non_retenus.html  pyproject.toml  requirements.txt  usage-cibnav.html  vide.html  wip.txt
.ipynb_checkpoints/: choosing_model-checkpoint.ipynb  cibnav-visites-mlp-checkpoint.ipynb  dataset_visits-checkpoint.ipynb
docs/: README.md  accidentologie.md  algorithme2.md  ameliorations.md  analyse_securite.md  annexes.md  cadrage.md  controles_gens_de_mer.md  controles_securite.md  donnees2.md  evolution_cibnav_v2.md  faq.md  fonctionnement_analyse.md  general2.md  modeles_donnees.md  moteur_regles.md  package-lock.json  package.json  parametres_en_cours_analyse.md  parametres_non_retenus.md  usage-cibnav.md
embulk/: oracle_to_postgres.yml.liquid
notebooks/: 1_transformation_frequence.qmd  2_analyse_exploratoire_PC.html  2_analyse_exploratoire_PC.qmd  3_exploration_glm.html  3_exploration_glm.qmd  Makefile  cibnav-visites.ipynb  cibnav.ipynb  classification_binaire.ipynb  dataset_visits.ipynb  reduction_dimensionnalite.qmd  regression.ipynb  transformation_frequence.qmd
scripts/: drop_data_db.sh  setup_db.sh  setup_mb_data.sh  setup_postgres_data.sh
sql/: categorie_navigation.sql  categorie_navigation_complet.sql  navire.sql  plaisance.sql  (+1 more)
(+57 files in other folders)
