[tool.poetry]
name = "cibnav"
version = "0.1.0"
description = ""
authors = ["Quentin Loridant <quentin.loridant@multi.coop>", "Pierre Camilleri <pierre.camilleri@multi.coop>"]
packages = [
    { include = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.5"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

